Switch streams socket abstraction to use a timeval structure instead of an integer to allow subsecond timeouts.

This supports the previous behavior of fsockopen()
Fixes bug #16261


git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@89505 c90b9560-bf6c-de11-be94-00142212c4b1