ext/standard/ftp_fopen_wrapper.c
@@ -124,7 +124,7 @@ php_stream * php_stream_url_wrap_ftp(php_stream_wrapper *wrapper, char *path, ch
 	if (resource->port == 0)
 		resource->port = 21;
 	
-	stream = php_stream_sock_open_host(resource->host, resource->port, SOCK_STREAM, 0, 0);
+	stream = php_stream_sock_open_host(resource->host, resource->port, SOCK_STREAM, NULL, 0);
 	if (stream == NULL)
 		goto errexit;
 
