ext/standard/http_fopen_wrapper.c
@@ -98,7 +98,7 @@ php_stream *php_stream_url_wrap_http(php_stream_wrapper *wrapper, char *path, ch
 	else if (resource->port == 0)
 		resource->port = 80;
 
-	stream = php_stream_sock_open_host(resource->host, resource->port, SOCK_STREAM, 0, 0);
+	stream = php_stream_sock_open_host(resource->host, resource->port, SOCK_STREAM, NULL, 0);
 	if (stream == NULL)	
 		goto out;
 
